2014-07-06 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Merge inst_sub() to inst_sbc().

2014-07-03 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs in inst_dec(), inst_inc() & inst_ldxy(): flags affection.
          Make inst_addw(), inst_clr() & inst_ldxydst() more understandable.
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs in CALLR & CALLF: the stack saved PC value is not accurate.

2014-06-30 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs in inst_adc() & inst_add() - flags affection.
          Fix potential bugs in inst_sll() & inst_rlc() - reg.X & reg.Y might exceed 0xffff.
        * sim/ucsim/stm8.src/stm8.cc:
          Improve code quality.

2014-06-25 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_sbc() and inst_cpw().
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs of flags affection in RLWA, and improve code quality of TRAP.

2014-06-21 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_addw(), inst_sub() and inst_cp().
        * sim/ucsim/stm8.src/stm8.cc:
          Fix potential bugs of flags affection in simulation of RRWA.

2014-06-20 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Fix potential bugs of flags affection in inst_addw().

2014-06-17 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Make the comment more understandable, fix potential bugs in inst_jr(). (JRSGT / JRSLE / JRSGE / JRSLT)

2014-06-10 Ben Shi <powerstudio1st AT 163.com>
        * sim/ucsim/stm8.src/inst.cc:
          Add indirect addressing handling in CLR, CPW & LD. Fix potential bugs in get_dest().

2014-06-03 Philipp Klaus Krause <pkk AT spth.de>
